--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: King's Blog
+author: King
+email: Jinxuxin2017@gmail.com
+description: share idear.
 
 # social links
 twitter_username: your-twitter-handle
-github_username:  your-github-handle
+github_username:  jinxuxin2007
+theme: minima
 
 show_excerpts: true # set to false to remove excerpts on the homepage
